Updated Overflowing Issues

--- a/timetable/mobile/assets/mobile.css
+++ b/timetable/mobile/assets/mobile.css
@@ -31,7 +31,7 @@
 }
 
 html {
-    height: 100vh;
+    height: 100%;
 
     overflow: auto;
 
@@ -40,7 +40,7 @@ html {
 }
 
 body {
-    width: 100vw;
+    width: 100%;
     max-width: 80em;
 
     margin: auto;
